feat(update): hexagonal components placing, repository entities conversion